Chapter11/kiada-stable-and-canary.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiada-001
  labels:
    app: kiada
    rel: stable
spec:
  volumes:
  - name: etc-envoy
    projected:
      sources:
      - configMap:
          name: kiada-ssl-config
      - secret:
          name: kiada-tls
          items:
          - key: tls.crt
            path: example-com.crt
          - key: tls.key
            path: example-com.key
            mode: 0600
  containers:
  - name: kiada
    image: luksa/kiada:0.5
    imagePullPolicy: IfNotPresent
    env:
    - name: QUOTE_URL
      value: http://quote/quote
    - name: QUIZ_URL
      value: http://quiz
    - name: POD_NAME
      valueFrom:
        fieldRef:
          fieldPath: metadata.name
    - name: POD_IP
      valueFrom:
        fieldRef:
          fieldPath: status.podIP
    - name: NODE_NAME
      valueFrom:
        fieldRef:
          fieldPath: spec.nodeName
    - name: NODE_IP
      valueFrom:
        fieldRef:
          fieldPath: status.hostIP
    ports:
    - name: http
      containerPort: 8080
  - name: envoy
    image: envoyproxy/envoy:v1.31-latest
    command: [ "envoy", "-c", "/etc/config/envoy.yaml" ]
    volumeMounts:
    - name: etc-envoy
      mountPath: /etc/config
      readOnly: true
    ports:
    - name: https
      containerPort: 8443
    - name: admin
      containerPort: 9901
---
apiVersion: v1
kind: Pod
metadata:
  name: kiada-002
  labels:
    app: kiada
    rel: stable
spec:
  volumes:
  - name: etc-envoy
    projected:
      sources:
      - configMap:
          name: kiada-ssl-config
      - secret:
          name: kiada-tls
          items:
          - key: tls.crt
            path: example-com.crt
          - key: tls.key
            path: example-com.key
            mode: 0600
  containers:
  - name: kiada
    image: luksa/kiada:0.5
    imagePullPolicy: IfNotPresent
    env:
    - name: QUOTE_URL
      value: http://quote/quote
    - name: QUIZ_URL
      value: http://quiz
    - name: POD_NAME
      valueFrom:
        fieldRef:
          fieldPath: metadata.name
    - name: POD_IP
      valueFrom:
        fieldRef:
          fieldPath: status.podIP
    - name: NODE_NAME
      valueFrom:
        fieldRef:
          fieldPath: spec.nodeName
    - name: NODE_IP
      valueFrom:
        fieldRef:
          fieldPath: status.hostIP
    ports:
    - name: http
      containerPort: 8080
  - name: envoy
    image: envoyproxy/envoy:v1.31-latest
    command: [ "envoy", "-c", "/etc/config/envoy.yaml" ]
    volumeMounts:
    - name: etc-envoy
      mountPath: /etc/config
      readOnly: true
    ports:
    - name: https
      containerPort: 8443
    - name: admin
      containerPort: 9901
---
apiVersion: v1
kind: Pod
metadata:
  name: kiada-003
  labels:
    app: kiada
    rel: stable
spec:
  volumes:
  - name: etc-envoy
    projected:
      sources:
      - configMap:
          name: kiada-ssl-config
      - secret:
          name: kiada-tls
          items:
          - key: tls.crt
            path: example-com.crt
          - key: tls.key
            path: example-com.key
            mode: 0600
  containers:
  - name: kiada
    image: luksa/kiada:0.5
    imagePullPolicy: IfNotPresent
    env:
    - name: QUOTE_URL
      value: http://quote/quote
    - name: QUIZ_URL
      value: http://quiz
    - name: POD_NAME
      valueFrom:
        fieldRef:
          fieldPath: metadata.name
    - name: POD_IP
      valueFrom:
        fieldRef:
          fieldPath: status.podIP
    - name: NODE_NAME
      valueFrom:
        fieldRef:
          fieldPath: spec.nodeName
    - name: NODE_IP
      valueFrom:
        fieldRef:
          fieldPath: status.hostIP
    ports:
    - name: http
      containerPort: 8080
  - name: envoy
    image: envoyproxy/envoy:v1.31-latest
    command: [ "envoy", "-c", "/etc/config/envoy.yaml" ]
    volumeMounts:
    - name: etc-envoy
      mountPath: /etc/config
      readOnly: true
    ports:
    - name: https
      containerPort: 8443
    - name: admin
      containerPort: 9901
---
apiVersion: v1
kind: Pod
metadata:
  name: kiada-canary
  labels:
    app: kiada
    rel: canary
spec:
  volumes:
  - name: etc-envoy
    projected:
      sources:
      - configMap:
          name: kiada-ssl-config
      - secret:
          name: kiada-tls
          items:
          - key: tls.crt
            path: example-com.crt
          - key: tls.key
            path: example-com.key
            mode: 0600
  containers:
  - name: kiada
    image: luksa/kiada:0.5
    imagePullPolicy: IfNotPresent
    env:
    - name: QUOTE_URL
      value: http://quote/quote
    - name: QUIZ_URL
      value: http://quiz
    - name: POD_NAME
      valueFrom:
        fieldRef:
          fieldPath: metadata.name
    - name: POD_IP
      valueFrom:
        fieldRef:
          fieldPath: status.podIP
    - name: NODE_NAME
      valueFrom:
        fieldRef:
          fieldPath: spec.nodeName
    - name: NODE_IP
      valueFrom:
        fieldRef:
          fieldPath: status.hostIP
    ports:
    - name: http
      containerPort: 8080
  - name: envoy
    image: envoyproxy/envoy:v1.31-latest
    command: [ "envoy", "-c", "/etc/config/envoy.yaml" ]
    volumeMounts:
    - name: etc-envoy
      mountPath: /etc/config
      readOnly: true
    ports:
    - name: https
      containerPort: 8443
    - name: admin
      containerPort: 9901
---
apiVersion: v1
kind: ConfigMap
metadata:
  creationTimestamp: null
  name: kiada-ssl-config
  labels:
    app: kiada
binaryData:
  dummy.bin: n2VW39IEkyQ6Jxo+rdo5J06Vi7cz5XxZzkPOtN7MOGyXxVzWv07vUz8bxY5h4njJfZixwhPwoGepLnGZdRGw1qgpFB9HpyLsqVZ6jAwjjHD0afxxwEjb6+wofmgGmS1E3U9BZScMPZGWJK7RGzZmQOeJeDPIt/1tBvQYwzMc8wu6owky4Ri3rOY9PlFnp5VOTzvBZadW8scbqtntJeWCtJFoS0AH2y4ZFyJPJ0l0V3JpY1qunnz60CyAMO9v1DgB2PUQUG/1HH89bpzf2OyMvHUJmOTIDZOh3D7aAEuYQ/6hU0uQsQ/K7Xx/nM9TA0RzEzuh8RBoXdkAvQPP5jk7yM2DqxG/CiHVp+7CDRFWgEN2GFd76RfO+pIoOFbD1Xm4yE/JBljOA9ztwm865m3A4l2ToT2p7ZWHKmdZe8pXz4ZwIGBYDUHHNVQW5UUnf0Jbd9UR8GJ//gmbxLfVxjC/lMSWGUqCpYO4YdBPjXQ [...]
data:
  envoy.yaml: |
    admin:
      access_log:
      - name: envoy.access_log
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          path: /tmp/envoy.admin.log
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 9901
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8443
        filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                - certificate_chain:
                    filename: "/etc/config/example-com.crt"
                  private_key:
                    filename: "/etc/config/example-com.key"
          filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: service_kiada_localhost
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: service_kiada_localhost
        connect_timeout: 0.25s
        type: STATIC
        load_assignment:
          cluster_name: service_kiada_localhost
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8080
---
apiVersion: v1
kind: Secret
metadata:
  name: kiada-tls
  labels:
    app: kiada
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZrekNDQTN1Z0F3SUJBZ0lVUWhRaXVGUDd2RXBsQ0JHMTY3SUNHeGc0cTBFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1dERUxNQWtHQTFVRUJoTUNXRmd4RlRBVEJnTlZCQWNNREVSbFptRjFiSFFnUTJsMGVURWNNQm9HQTFVRQpDZ3dUUkdWbVlYVnNkQ0JEYjIxd1lXNTVJRXgwWkRFVU1CSUdBMVVFQXd3TFpYaGhiWEJzWlM1amIyMHdJQmNOCk1qQXdOVEkzTURneE5UVTFXaGdQTWpFeU1EQTFNRE13T0RFMU5UVmFNRmd4Q3pBSkJnTlZCQVlUQWxoWU1SVXcKRXdZRFZRUUhEQXhFWldaaGRXeDBJRU5wZEhreEhEQWFCZ05WQkFvTUUwUmxabUYxYkhRZ1EyOXRjR0Z1ZVNCTQpkR1F4RkRBU0JnTlZCQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUpRUUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQ1Nzd2dna25BZ0VBQW9JQ0FRQzlhVGFMdVpQbnpaSXIKSklZdjJaRUdFSDkrdUFDeDRjbTQzN2xJdWhTNWQ5UDFQWmlyc3RWTVNUQk1uTnBrclR6aUgrOEg2YS9HQ2RnbwplZ3BKSk5hdHBVYVNqOE5wOTR5R2lnQVJJbENiWEgwbEdHTjRYZnZ4Q2RKMnZHYWlzVi9lbHF3VXlBRTVsMGRvCldmOUZrTWxMVHp4TWRxcDJMWE1UYXJQN0VQQTlCTVk1WFJ4V3dDQmRhbjQyNFBOdEVvQzh1dURVZGh6ZEhucUMKUTd5aStXNDhtdTNLcFZ1SGZXaW01R0ZWSnYzc2NxZnl4RUdYWUdOTGMybVhCY1BiNzh4M0g3TGltdFFKMGJMMwpCWU5kT2s2dU5oajkyZ [...]
