Chapter11/pod.quote-readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quote-readiness
  labels:
    app: quote
    rel: stable
spec:
  volumes:
  - name: shared
    emptyDir: {}
  initContainers:
  - name: index-creator
    image: busybox
    command:
    - sh
    - -c
    - echo "This is the quote service running in pod $HOSTNAME on node $NODE_NAME" > /html/index.html
    env:
    - name: NODE_NAME
      valueFrom:
        fieldRef:
          fieldPath: spec.nodeName
    volumeMounts:
    - name: shared
      mountPath: /html
  containers:
  - name: quote-writer
    image: luksa/quote-writer:0.1
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: shared
      mountPath: /var/local/output
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: shared
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - name: http
      containerPort: 80
    readinessProbe:
      failureThreshold: 1
      httpGet:
        port: 80
        path: /quote
        scheme: HTTP
