Chapter11/suite.kiada.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quote-stable-001
  labels:
    app: quote
    rel: stable
spec:
  volumes:
  - name: shared
    emptyDir: {}
  initContainers:
  - name: index-creator
    image: busybox
    command:
    - sh
    - -c
    - echo "This is the quote service running in pod $HOSTNAME on node $NODE_NAME" > /html/index.html
    env:
    - name: NODE_NAME
      valueFrom:
        fieldRef:
          fieldPath: spec.nodeName
    volumeMounts:
    - name: shared
      mountPath: /html
  containers:
  - name: quote-writer
    image: luksa/quote-writer:0.1
    imagePullPolicy: Always
    volumeMounts:
    - name: shared
      mountPath: /var/local/output
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: shared
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - name: http
      containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: quote-stable-002
  labels:
    app: quote
    rel: stable
spec:
  volumes:
  - name: shared
    emptyDir: {}
  initContainers:
  - name: index-creator
    image: busybox
    command:
    - sh
    - -c
    - echo "This is the quote service running in pod $HOSTNAME on node $NODE_NAME" > /html/index.html
    env:
    - name: NODE_NAME
      valueFrom:
        fieldRef:
          fieldPath: spec.nodeName
    volumeMounts:
    - name: shared
      mountPath: /html
  containers:
  - name: quote-writer
    image: luksa/quote-writer:0.1
    imagePullPolicy: Always
    volumeMounts:
    - name: shared
      mountPath: /var/local/output
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: shared
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - name: http
      containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: quote-stable-003
  labels:
    app: quote
    rel: stable
spec:
  volumes:
  - name: shared
    emptyDir: {}
  initContainers:
  - name: index-creator
    image: busybox
    command:
    - sh
    - -c
    - echo "This is the quote service running in pod $HOSTNAME on node $NODE_NAME" > /html/index.html
    env:
    - name: NODE_NAME
      valueFrom:
        fieldRef:
          fieldPath: spec.nodeName
    volumeMounts:
    - name: shared
      mountPath: /html
  containers:
  - name: quote-writer
    image: luksa/quote-writer:0.1
    imagePullPolicy: Always
    volumeMounts:
    - name: shared
      mountPath: /var/local/output
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: shared
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - name: http
      containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: quote-canary
  labels:
    app: quote
    rel: canary
spec:
  volumes:
  - name: shared
    emptyDir: {}
  initContainers:
  - name: index-creator
    image: busybox
    command:
    - sh
    - -c
    - echo "This is the quote service running in pod $HOSTNAME on node $NODE_NAME" > /html/index.html
    env:
    - name: NODE_NAME
      valueFrom:
        fieldRef:
          fieldPath: spec.nodeName
    volumeMounts:
    - name: shared
      mountPath: /html
  containers:
  - name: quote-writer
    image: luksa/quote-writer:0.1
    imagePullPolicy: Always
    volumeMounts:
    - name: shared
      mountPath: /var/local/output
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: shared
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - name: http
      containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: quiz-stable
  labels:
    app: quiz
    rel: stable
spec:
  volumes:
  - name: initdb
    emptyDir: {}
  - name: quiz-data
    emptyDir: {}
  initContainers:
  - name: installer
    image: luksa/quiz-initdb-script-installer:0.1
    imagePullPolicy: Always
    volumeMounts:
    - name: initdb
      mountPath: /initdb.d
  containers:
  - name: quiz-api
    image: luksa/quiz-api:0.1
    imagePullPolicy: Always
    ports:
    - name: http
      containerPort: 8080
  - name: mongo
    image: mongo
    volumeMounts:
    - name: quiz-data
      mountPath: /data/db
    - name: initdb
      mountPath: /docker-entrypoint-initdb.d/
      readOnly: true
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: quiz-data
  labels:
    app: quiz
spec:
  resources:
    requests:
      storage: 1Gi
  accessModes:
  - ReadWriteOnce
