Chapter11/svc.kiada-publish-not-ready-addresses.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiada-publish-not-ready-addresses
spec:
  publishNotReadyAddresses: true
  selector:
    app: kiada
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
