Chapter11/svc.quiz.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz
spec:
  type: ClusterIP
  selector:
    app: quiz
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
