Chapter11/svc.quote-dualstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-dualstack
spec:
  ipFamilyPolicy: RequireDualStack
  selector:
    app: quote
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
