Chapter11/svc.quote-topology-aware-hints.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-topology-aware-hints
  annotations:
    service.kubernetes.io/topology-aware-hints: Auto
spec:
  selector:
    app: quote
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
