Chapter11/svc.quote.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote
spec:
  selector:
    app: quote
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
